Fixed problems with adding and deleting creators.

--- a/autharch_sharc/templates/editor/includes/originationpersname_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/originationpersname_inline_form.html
@@ -1,9 +1,18 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="physloc">
-  {% render_field form.id %}
-  {% with parts=form.formsets.parts %}
-  {% for part in parts.forms %}
-  {% include "./name_part_inline_form.html" with form=part %}
-  {% endfor %}
-  {% endwith %}
-</fieldset>
+<div data-form-type="originationpersname">
+  <div class="formset">
+    {% render_field form.id %}
+    {% with parts=form.formsets.parts %}
+    <div class="management_form">
+      {{ parts.management_form }}
+    </div>
+    <div class="fieldsets">
+      {% for part in parts.forms %}
+      {% render_field part.id %}
+      {% render_field part.order %}
+      {% render_field part.part %}
+      {% endfor %}
+    </div>
+    {% endwith %}
+  </div>
+</div>
