--- a/autharch_sharc/templates/editor/includes/bibliography_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/bibliography_inline_form.html
@@ -1,17 +1,19 @@
 {% load editor_form_tags %}
-{% render_field form.id %}
-{% with bibrefs=form.formsets.bibrefs %}
-<div class="formset">
-  <div class="management_form">
-    {{ bibrefs.management_form }}
+<fieldset data-form-type="bibliography">
+  {% render_field form.id %}
+  {% with bibrefs=form.formsets.bibrefs %}
+  <div class="formset">
+    <div class="management_form">
+      {{ bibrefs.management_form }}
+    </div>
+    <div class="fieldsets">
+      {% for bibref in bibrefs.forms %}
+      {% include "./bibref_inline_form.html" with form=bibref %}
+      {% endfor %}
+    </div>
+    <label class="create linked-button">
+      <input type="button" class="icon-only" value="&#xf067;" onclick="addEmptyForm('bibref', this)">Add published reference
+    </label>
   </div>
-  <div class="fieldsets">
-    {% for bibref in bibrefs.forms %}
-    {% include "./bibref_inline_form.html" with form=bibref %}
-    {% endfor %}
-  </div>
-  <label class="create linked-button">
-    <input type="button" class="icon-only" value="&#xf067;" onclick="addEmptyForm('bibref', this)">Add published reference
-  </label>
-</div>
+</fieldset>
 {% endwith %}
