--- a/autharch_sharc/templates/editor/includes/persname_non_model_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/persname_non_model_inline_form.html
@@ -1,16 +1,12 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="persname">
-  <div class="fieldset-header">
-    <h4>??</h4>
-    <div class="flex">
-      <div>
-        {% include "./delete_inline_button.html" %}
-      </div>
-      <button class="toggle-tab-button active" onclick="toggleTab()" aria-label="toggle tab"></button>
-    </div>
-  </div>
-  <div class="fieldset-body expand inline-deletable">
+<fieldset class="flex fieldset" data-form-type="associatedpersname">
+  <div class="inline-deletable">
     {% render_form_delete_widget form.DELETE %}
+    {% render_field form.id %}
     {% render_field form.persname %}
+    {% render_field form.relator %}
+  </div>
+  <div class="delete-button-block">
+    {% include "./delete_inline_button.html" %}
   </div>
 </fieldset>
