--- a/autharch_sharc/templates/base.html
+++ b/autharch_sharc/templates/base.html
@@ -82,6 +82,7 @@
     {% block end_js %}
     <script src="{% static 'vendor/jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'js/ckeditor/ckeditor.js' %}"></script>
+    <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
     <script src="{% static 'js/simplePagination/jquery.simplePagination.js' %}"></script>
     <script src="{% static 'js/ckeditor/adapters/jquery.js' %}"></script>
     <script src="{% static 'js/jquery-ui/jquery-ui.min.js' %}"></script>
