Implemented more of record editing form.

--- a/autharch_sharc/templates/editor/includes/dimension_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/dimension_inline_form.html
@@ -1,5 +1,5 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="dimension">
+<div data-form-type="dimension">
   {% render_field form.id %}
   {% render_field form.dimensions %}
-</fieldset>
+</div>
