--- a/autharch_sharc/templates/editor/includes/physfacet_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/physfacet_inline_form.html
@@ -1,5 +1,5 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="physfacet">
+<div data-form-type="physfacet">
   {% render_field form.id %}
   {% render_field form.physfacet %}
-</fieldset>
+</div>
