--- a/autharch_sharc/templates/editor/includes/physloc_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/physloc_inline_form.html
@@ -1,5 +1,5 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="physloc">
+<div data-form-type="physloc">
   {% render_field form.id %}
   {% render_field form.physloc %}
-</fieldset>
+</div>
