--- a/autharch_sharc/templates/editor/includes/scopecontent_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/scopecontent_inline_form.html
@@ -1,5 +1,5 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="scopecontent">
+<div data-form-type="scopecontent">
   {% render_field form.id %}
   {% render_field form.scopecontent %}
-</fieldset>
+</div>
