--- a/autharch_sharc/templates/editor/record_list.html
+++ b/autharch_sharc/templates/editor/record_list.html
@@ -4,7 +4,7 @@
 <main>
   {% block page_header %}
   <div class="page-header">
-    <h1>Archival records ({{ results_count }})</h1>
+    <h1>Objects ({{ results_count }})</h1>
     <div class="search-filter">
       <form action="." class="search" id="record-search-form" method="get">
         <label>
@@ -40,6 +40,7 @@
           </div>
         </div>
       </div>
+      <a href="{% url 'editor:record-create' %}" class="create">Create</a>
     </div>
   </div>
   {% endblock page_header %}
