Set up the (far too complicated) year range sliders for record list.

--- a/autharch_sharc/static/sass/project.scss
+++ b/autharch_sharc/static/sass/project.scss
@@ -890,8 +890,8 @@ main {
                         display: inline-block;
                         margin-left: 10px;
                     }
-                    &#year-range-filter {
-                        #year-range {
+                    &.year-range-filter {
+                        .year-range {
                             margin: 0px 10px 12px 10px;
                         }
                         .checkbox-anchor {
