Added audience field to record editing form.

--- a/autharch_sharc/templates/editor/record_edit.html
+++ b/autharch_sharc/templates/editor/record_edit.html
@@ -111,6 +111,7 @@
             </div>
             <div>
               {% render_field form.recordid %}
+              {% render_field form.audience %}
             </div>
           </div>
           <div class="two-column-table">
