--- a/autharch_sharc/templates/base.html
+++ b/autharch_sharc/templates/base.html
@@ -66,9 +66,10 @@
     </footer>
     {% endblock footer %}
     {% block end_js %}
-    <script src="{% static 'vendor/jquery/dist/jquery.min.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="{% static 'js/ckeditor/ckeditor.js' %}"></script>
-    <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
+      <script src="{% static 'vendor/tinymce/js/tinymce/tinymce.min.js' %}"></script>
+    <script src="{% static 'vendor/tinymce/js/tinymce/jquery.tinymce.min.js' %}"></script>
     <script src="{% static 'js/simplePagination/jquery.simplePagination.js' %}"></script>
     <script src="{% static 'js/ckeditor/adapters/jquery.js' %}"></script>
     <script src="{% static 'js/jquery-ui/jquery-ui.min.js' %}"></script>
