Added delete buttons for dates and date notes.

--- a/autharch_sharc/templates/editor/includes/unitdate_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/unitdate_inline_form.html
@@ -1,5 +1,11 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="unitdate">
-  {% render_field form.id %}
-  {% render_field form.unitdate %}
+<fieldset class="flex" data-form-type="unitdate">
+  <div class="inline-deletable">
+    {% render_form_delete_widget form.DELETE %}
+    {% render_field form.id %}
+    {% render_field form.unitdate %}
+  </div>
+  <div class="delete-button-block">
+    {% include "./delete_inline_button.html" %}
+  </div>
 </fieldset>
