--- a/autharch_sharc/templates/editor/includes/unitdatestructured_inline_form.html
+++ b/autharch_sharc/templates/editor/includes/unitdatestructured_inline_form.html
@@ -1,16 +1,22 @@
 {% load editor_form_tags %}
-<fieldset data-form-type="unitdatestructured">
-  {% render_field form.id %}
-  {% with dateranges=form.formsets.dateranges %}
-  <div class="formset">
-    <div class="management_form">
-      {{ dateranges.management_form }}
+<fieldset class="flex" data-form-type="unitdatestructured">
+  <div class="fieldset inline-deletable">
+    {% render_form_delete_widget form.DELETE %}
+    {% render_field form.id %}
+    {% with dateranges=form.formsets.dateranges %}
+    <div class="formset">
+      <div class="management_form">
+        {{ dateranges.management_form }}
+      </div>
+      <div class="fieldsets">
+        {% for daterange in dateranges.forms %}
+        {% include "./daterange_inline_form.html" with form=daterange %}
+        {% endfor %}
+      </div>
     </div>
-    <div class="fieldsets">
-      {% for daterange in dateranges.forms %}
-      {% include "./daterange_inline_form.html" with form=daterange %}
-      {% endfor %}
-    </div>
+  </div>
+  <div class="delete-button-block">
+    {% include "./delete_inline_button.html" %}
   </div>
   {% endwith %}
 </fieldset>
